# taffy-emoji

./: .gitignore  README.md  pyproject.toml
src/: config.py  dataset.py  model.py  predict.py  train.py
