[project]
name = "taffy-emoji"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "ruff>=0.15.16",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.1",
]
